Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 <body>
 
   <!-- Write your HTML in this file -->
+ <ul>   
+ 
+ <li> pizza </li>
+ <li> chocolate </li>
+ <li> barbecue </li>
+ </li> dire 
+ <ul> 
+ <li> diri</li>
+ <li> sos pwa </li>
+ <li> shrimp </li>
+ 
+ </ul>
+  
+ 
+ 
+ 
+ </ul>
+ 
+
+
+  
+  
 
 </body>
 </html>
