Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
  
  <li> pizza </li>
  <li> chocolate </li>
- <li> barbecue </li>
- 
+ <li> diri ak legume 
+ <ul>
+   <li> diri </li>
+   <li> sos pwa </li>
+   <li> legume </li>
+   </ul>
+</li> 
+
+<li>desert </li>
  
   
- 
- 
- 
- </ul>
+</ul>
  
 
 
